
====
NEWS
====

- 1.4.9 - 2005-..-..

  * added server.core-files option (sandy <sandy@meebo.com>)
  * added docs for mod_status
  * fixed 100% cpu loops in mod_cgi ("sandy" <sjen@cs.stanford.edu>)
  * fixed handling for secure-download.timeout (jamis@37signals.com)
  * fixed IE bug in content-charset in the output of mod_dirlisting (sniper@php.net)
  * fixed typos and language in the docs (ryan-2005@ryandesign.com)

- 1.4.8 - 2005-11-23

  * added auto-reconnect to ldap-server in mod_auth
    (joerg@netbsd.org)
  * changed auth.ldap-cafile to be optional 
    (joerg@netbsd.org)
  * added strip_request_uri in mod_fastcgi
  * added more X-* headers to mod_proxy
    (Ben Grimm <bengrimm@gmail.com>)
  * added 'debug' to simple-vhost to suppress the 
    (mod_simple_vhost.c.157) No such file or directory /servers/ww.lighttpd.net/pages/
    messages by default
  * added support to let the server listen on UNIX-socket 
  * changed default stat-cache-engine to 'simple'
  * removed debian/ dir from source package on request by packager
  * fixed max-age timestamps in mod_expire
  * fixed encoding the filenames in PROPFIND in mod_webdav
  * fixed range request handling in network_writev
  * fixed retry on connect error in mod_fastcgi
    (Robert G. Jakabosky <bobby@alphatrade.com>)
  * fixed possible crash in mod_webdav if sqlite3 support 
    is available but not use
  * fixed fdvent-handler init if server.max-worker was used
    (Siddharth Vijayakrishnan <mail@bluefireworks.net>)
  * fixed missing cleanup in mysql_vhost
  * fixed assert() in "connections.c:962: 
      connection_handle_read_state: Assertion 'c->mem->used' failed."
  * fixed 64bit issue in md5
  * fixed crash in mod_status
  * fixed duplicate headers in mod_proxy
  * fixed Content-Length in HEAD request in mod_proxy
  * fixed unsigned/signed comparisions
  * fixed streaming in mod_cgi
  * fixed possible overflow in password-salt handling
    (reported on slashdot by james-web@and.org)